--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
 
 #background-img {
     width: 100%;
-    height: 0%;
+    height: 100%;
+    opacity: 0;
 }
 
 a {
@@ -17,5 +18,6 @@ a {
     position: absolute;
     top: 0%;
     left: 50%;
+    opacity: 0;
     transform: translateX(-50%);
 }
