--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
-    background-color: black;
+    background-image: linear-gradient(to bottom right, #09494f, black);
 }
 
-#background-img {
-    width: 100%;
-    height: 100%;
+#avatar {
+    border: 5px solid white;
+    width: 130px;
+    height: 130px;
+    border-radius: 100px;
+    transform: translateY(150px);
     opacity: 0;
 }
 
